--- a/PMP/pom.xml
+++ b/PMP/pom.xml
@@ -32,6 +32,11 @@
             <version>17.0.6</version>
         </dependency>
         <dependency>
+            <groupId>net.sourceforge.tess4j</groupId>
+            <artifactId>tess4j</artifactId>
+            <version>5.4.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.30</version> <!-- Bổ sung dòng này -->
