--- a/PMP/pom.xml
+++ b/PMP/pom.xml
@@ -25,6 +25,11 @@
             <artifactId>log4j-api</artifactId>
             <version>2.20.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.12.0</version> <!-- hoặc bản mới hơn -->
+        </dependency>
 
         <dependency>
             <groupId>org.openjfx</groupId>
